# GPUDB-Prefetch

./: .gitignore  CMakeLists.txt  README.md  final-run.ipynb
include/btree/: amac-2.cuh  amac.cuh  backup_common.cuh  common.cuh  gp-2.cuh  gp-sep.cuh  gp.cuh  imv-2.cuh  imv.cuh  insert.cuh  naive.cuh  notes.md  spp-2.cuh  spp.cuh  ~spp.cuh
include/bucketjoin/: amac.cuh  common.cuh  naive.cuh
include/classicjoin/: amac.cuh  common.cuh  config.cuh  gp.cuh  imv.cuh  naive.cuh  spp.cuh
include/datagen/: generator_ETHZ.cuh
include/join/: amac.cuh  config.cuh  gp.cuh  imv.cuh  naive.cuh  spp.cuh
include/util/: allocator.cuh  args.cuh  util.cuh
src/datagen/: generator_ETHZ.cu
test/: A_display.py  A_draw.py  A_run.py  B_draw.py  B_run.py  C_draw.py  C_run.py  D_draw.py  D_run.py  E_draw.py  E_run.py  F_draw.py  F_run.py  Z_draw.py  btree.cu  bucketjoin.cu  classicjoin.cu  imv.cu  join.cu
